# im-server

./: .gitignore  Cargo.toml  README.md  config.toml  config.yaml
crates/im-connect/: Cargo.toml  config.toml
crates/im-connect/src/: main.rs  prelude.rs
crates/im-connect/src/config/: mod.rs
crates/im-connect/src/hoops/: mod.rs
crates/im-connect/src/routers/: mod.rs
crates/im-server/: .gitignore  Cargo.toml  config.yaml
crates/im-server/sql/: public.sql
crates/im-server/src/: main.rs
crates/im-server/src/api/: im_friendship_api.rs  im_group_api.rs  im_message_api.rs  im_outbox_api.rs  im_user_api.rs  message_api.rs  subcription_api.rs  upload_api.rs
crates/im-server/src/config/: log_config.rs  mod.rs
crates/im-server/src/dto/: mod.rs
crates/im-server/src/models/: im_chat.rs  im_friendship.rs  im_group.rs  im_group_message.rs  im_single_message.rs  im_user.rs  mod.rs  share.rs  user.rs
crates/im-server/src/mqtt/: mod.rs
crates/im-server/src/service/: im_chat_service.rs  im_friendship_service.rs  user_service.rs  (+3 more)
crates/im-share/: Cargo.toml
crates/im-share/examples/: mqtt_client.rs  mqtt_publisher.rs
crates/im-share/src/: lib.rs  snowflake.rs  subscription.rs
examples/: mqtt_publisher.rs
im-connect/: Cargo.toml
im-server/examples/: mqtt_client.rs  mqtt_publisher.rs
im-server/src/: error.rs
im-server/src/api/: im_group_api.rs  im_message_api.rs  upload_api.rs  user_api.rs
im-server/src/config/: jwt_config.rs  upload_config.rs
im-server/src/db/: mod.rs
im-server/src/models/: im_friendship.rs  im_group_message.rs  im_outbox.rs  user.rs
im-server/src/routers/: mod.rs
im-server/src/service/: friend_service.rs  im_friendship_service.rs  im_group_service.rs  im_message_service.rs  user_service.rs
im-server/src/utils/: password.rs  subcription.rs
im-share/: Cargo.toml
sql/: public.sql
src/: error.rs  lib.rs  main.rs  prelude.rs
src/api/: auth.rs  auth_api.rs  friend_api.rs  im_chat_api.rs  im_friendship_api.rs  im_group_api.rs  im_message_api.rs  im_user_api.rs  message_api.rs  mod.rs  subcription_api.rs  subcription_handler.rs  upload_api.rs  user.rs  user_api.rs
src/config/: db_config.rs  jwt_config.rs  mod.rs
src/dto/: mod.rs
src/hoops/: jwt.rs  mod.rs
src/models/: im_chat.rs  im_friendship.rs  im_group.rs  im_group_message.rs  im_single_message.rs  im_user.rs  mod.rs  resp.rs  response.rs  share.rs  user.rs
src/mqtt/: mod.rs
src/routers/: mod.rs
src/service/: auth_service.rs  friend_service.rs  im_chat_service.rs  im_friendship_service.rs  im_message_service.rs  im_outbox_service.rs  im_user_service.rs  mod.rs  user_service.rs
src/utils/: auth.rs  mod.rs  mqtt.rs  redis.rs  snowflake.rs  subcription.rs
(+1 files in other folders)
