[package]
name = "im-connect"
version = "0.1.0"
edition = "2024"

[dependencies]
im-share = { path = "../im-share" }
anyhow = "1"
thiserror = "2"
jsonwebtoken = {version = "10", features = ["rust_crypto"]}
serde = {version = "1", features = ["derive"]}
tracing = "0.1"
tracing-appender ="0.2"
tracing-subscriber = {version = "0.3", features = ["env-filter", "json", "local-time"]}
time = { version = "0.3", features = ["macros", "serde-human-readable"] }
figment = { version = "0.10", features = ["env", "toml", "yaml"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "postgres", "time"]}
tokio = {version = "1", features = ["full"]}
salvo = {version = "0.84", features = ["cors", "logging", "oapi", "jwt-auth", "affix-state", "websocket"]}
serde_json = "1"
ulid = "1.2.1"
reqwest = { version = "0.12.24", features = ["json"] }
image = { version = "0.25.9", features = ["jpeg", "png", "webp"] }
