[package]
name = "im-share"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
ulid = "1.2.1"
dashmap = "6.1.0"
rumqttc = { version = "0.25", default-features = false, features = ["use-rustls"] }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.144"
tracing = "0.1"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
argon2 = "0.5"
rand = "0.9"

[dev-dependencies]
tracing-subscriber = "0.3"
